--- a/src/demo/myJq.html
+++ b/src/demo/myJq.html
@@ -5,9 +5,15 @@
     <title>Title</title>
 </head>
 <body>
+    <div id="box"></div>
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
     <script src="./js/myJq.js"></script>
     <script type="text/javascript">
-        console.log($())
+        console.log($("li"))
     </script>
 </body>
 </html>
