JavaScript_简单框架封装

--- a/src/demo/myJq.html
+++ b/src/demo/myJq.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    <div id="box"></div>
+    <div id="box">box</div>
     <ul>
         <li></li>
         <li></li>
@@ -13,7 +13,7 @@
     </ul>
     <script src="./js/myJq.js"></script>
     <script type="text/javascript">
-        console.log($("li"))
+
     </script>
 </body>
 </html>
