面向对象应用举例

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,14 @@
     <div id="container">
 
     </div>
+    <p>1</p>
+    <p>2</p>
+    <p>3</p>
+    <script type="text/javascript" src="./js/myJquery.js"></script>
 <script>
-
+    var $p = $('p');
+    $p.append()
 </script>
+
 </body>
 </html>
